--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -89,9 +89,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 </head>
 
 <body>
-
 	<script>
-		NekoType = "black"
+		NekoType = "ghost"
 
 	</script>
 	<h1 id=nl>
@@ -149,9 +148,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="intro" class="box">
 			<img class="intro-img" align="left" style="max-width:100%" alt="">
-			<p>hello! my name is <b class="me">des</b> and this is my website! it mostly serves as a digital journal where i share whatever i want, however i want it! coding this site has been the most fun i've had online in a long time. i hope you find something you like.</p>
+			<p>hello! my name is <b class="me">des</b> and this is my website! it mostly serves as a digital journal, mostly about my interests and life. <b title="yes, it is a reference to fallout's dogmeat!">doqmeat.com</b> is 100% a passion project of mine that i've been doing for fun since 2023! i've had a lot of fun learning how to code this site in order to put out whatever i want however i want it! i hope you find something you like as you browse :3</p>
 
-			<p>here's my <a href="/guestbook">guestbook</a> if you'd like to write a little message about your visit <img src="!g/pix/cat-heart.gif"> every single message means a ton to me! thank you for visiting my site! ヾ(￣▽￣)</p>
+			<p>here's my <a href="/guestbook">guestbook</a> if you'd like to write a little message about your visit <span class="no">and my <a style="cursor:help" onclick="chat()">chatbox</a> if you'd like something more casual</span> <img src="!g/pix/cat-heart.gif"> every single message means a ton to me!ヾ(￣▽￣)</p>
 
 			<p>this website will probably be an endless <a title="github issues" href="https://github.com/doqmeat/doqmeat.com/issues/35" target="_blank" class="outlink">work-in-progress</a>, meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail</a> me.</p>
 
@@ -183,13 +182,14 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a>, <a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a>, sonic rush</p>
+			<!--			<a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a>-->
 			<p><span class="hl">reading:</span> <i>shimanami tasogare</i> by yuhki kamatani. <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a></p>
 			<p><span class="hl">coding/writing:</span> N/A</p>
-			<p class="date">last updated on 05.jun.24</p>
+			<p class="date">last updated on 07.jun.24</p>
 		</div>
 
 		<div id="updates" class="box">
