--- a/doqmeat/projects/learning-js/index.html
+++ b/doqmeat/projects/learning-js/index.html
@@ -19,6 +19,10 @@
 			font-family: consolas;
 		}
 
+		nav {
+			text-align: left;
+		}
+
 	</style>
 </head>
 
@@ -27,12 +31,19 @@
 	<main>
 		<p>i'm taking notes as i go through tutorials and read info <img src="/!g/pix/emoteoneourple.gif"></p>
 
-		<nav>navigation:
-			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="smarter-way-js.html">a smarter way to learn JS</a>
+		<h2>navigation</h2>
+		<nav>
+			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="smarter-way-js.html">a smarter way to learn JS</a> - taking notes as i read through it.
 			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG
 			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="practice.html">practice page</a> where i put what i've learned into practice.
 		</nav>
 
+		<h2>JS to-do list</h2>
+		<ul>
+			<li>have different themes on homepage that stay selected on reload</li>
+			<li>how to filter stuff</li>
+			<li>img modal pop up?</li>
+		</ul>
 	</main>
 
 	<footer>
