--- a/doqmeat/collection/mail-stamps/index.html
+++ b/doqmeat/collection/mail-stamps/index.html
@@ -40,6 +40,7 @@ coded with love by des
 		<p>stamps i've gathered from my USPS adventures. <b>i like sending out letters and postcards</b> to friends so thats why i have these. i dont go out of my way to collect them, though i would love to! <img src="/!g/pix/cat-tail.gif"> which reminds me: i need to get more stamps.</p>
 		<div id="container">
 			<div class="column">
+				<img title="new!" src="!g/240607-flowers.png" alt="watercolor flowers">
 				<img src="!g/fruit.jpg" alt="drawing of apples on branches">
 				<img src="!g/cacti-2019.jpg" alt="top down view of cactus with a flower on the top. from 2018">
 			</div>
@@ -64,7 +65,7 @@ coded with love by des
 		</div>
 
 		<footer>
-			<b>last updated on: 07.jan.24</b>
+			<b>last updated on: 07.jun.24</b>
 			<br>
 			<b>credit:</b> bg img by <a href="https://www.pexels.com/photo/brown-wooden-gate-and-green-leafed-tree-63743/" target="_blank">donald tong on pexels</a> / <a href="/notebook/links/fonts.html">fonts</a> used: simple, garden script.
 			<br>
