--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -187,8 +187,9 @@
 			<a title="galissia" href="https://galissa.neocities.org" target="_blank"><img src="!g/galissia.gif" alt="galissia"></a>
 			<a title="cherie / niki" href="https://cherie.nekoweb.org" target="_blank"><img src="!g/cherie.gif" alt="cherie"></a>
 			<a title="angel city" href="https://ginder.neocities.org" target="_blank"><img src="!g/ginder.png" alt="ginder"></a>
+			<a title="devils" href="https://devils.gay" target="_blank"><img src="!g/devils.gay.gif" alt="devils.gay"></a>
+			<a title="item64" href="https://item64.neocities.org" target="_blank"><img src="!g/item64.gif" alt="item64"></a>
 		</div>
-
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
 		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> /
 			<a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> /
