dall listening log

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -30,6 +30,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
+			<b>07.jun.24</b> - new listening log! /
 				<b>12.may.24</b> - updated featured section!
 			</marquee>
 		</div>
