--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -26,8 +26,7 @@
 	<div id="frame">
 		<h2>listening logs</h2>
 		<p>these will usually be first time listens but i will mention if it isn't otherwise.</p>
-		<p>these logs are basically a more fleshed out version of my <a href="https://rateyourmusic.com/doqmeat" target="_blank">RYM</a> yearly logs</p>
-		<p><small><b>21.mar.24</b> - i used to do these on a monthly basis, but because i have less free time now i cannot update this all the time! <img src="/!g/pix/sad.gif" alt=""> because of this i will be separating them based on the seasons of the year</small></p>
+		<p>these logs are basically a more fleshed out version of my <a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a> yearly logs. though because i have a bit less time now, these logs will be pretty rare on my site.</p>
 		<h3>pages</h3>
 		<a href="2024/spring.html" target="_parent">spring 2024</a>
 		<a href="2024/winter.html" target="_parent">winter 2024</a>
