--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -194,7 +194,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>07.jun.24: new <a href="/collection/mail-stamps/index.html">mail stamp</a> in collection</li>
+			<li>07.jun.24: new <a href="/collection/mail-stamps/index.html">mail stamp</a> in collection + <a href="/music/listening-log/2024/spring#5">dall</a> listening log</li>
 			<li>05.jun.24: added <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a> + new pics <a href="/photobook">photobook</a></li>
 			<li>04.jun.24: journal log: <a href="/journal">visiting AZ + 3DS</a></li>
 			<li>03.jun.24: scrapbook: <a href="/scrapbook/2024/index.html#jun">june</a></li>
