--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -214,7 +214,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a title="click me to see more freaks" href="/collection/cats" target="_blank"><img src="/collection/cats/!g/soggy-cat.jpg" width="90%" alt="featured cat, a cat saying i'm soggy bro"></a>
+			<a title="click me to see more freaks" href="/collection/cats" target="_blank"><img src="/collection/cats/!g/cat-ad.jpg" width="90%" alt="featured cat"></a>
 		</div>
 
 		<div id="listing" class="box">
