--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -24,6 +24,7 @@
 
 		<!--column 1-->
 		<div class="column">
+			<img src="!g/cat-ad.jpg">
 			<img src="!g/binkly.jpg">
 			<img src="!g/2cats.jpg" alt="2 cats hugging">
 			<img src="!g/grindneverstarts.jpg" alt="the grind never starts i'm sleeping">
