--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -277,6 +277,22 @@ hiii this is a caption
 		</div>
 		<!-- 4th column -->
 		<div class="column">
+			<div class="pic ds">
+				<img src="!g/240608-river%20(3).JPG">
+				<img src="!g/240608-river%20(4).JPG">
+				<img src="!g/240608-river%20(1).JPG">
+				<img src="!g/240608-river%20(5).JPG">
+				<img src="!g/240608-river%20(2).JPG">
+				<img src="!g/240608-river%20(6).JPG">
+				<img src="!g/240608-river%20(7).JPG">
+				<div class="hov">
+					<div class="caption">
+						went down a river.
+						<br>
+						<b>taken on 08.jun.24</b>
+					</div>
+				</div>
+			</div>
 
 			<div class="pic digi"><img src="!g/240419-misty.jpeg">
 				<div class="hov">
