--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -182,9 +182,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a>, sonic rush</p>
+			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a>, sonic rush, MySims</p>
 			<!--			<a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a>-->
-			<p><span class="hl">reading:</span> <i>shimanami tasogare</i> by yuhki kamatani. <i>chainsaw man</i> by tatsuki fujimoto</p>
+			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a></p>
