minor changes related to microblog

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -117,6 +117,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>personal</h3>
 			<a href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
+			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog <img src="/!g/pix/new1.gif"></a>
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
 			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
