--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -58,7 +58,7 @@ v3 of journal started on 25.feb.24./ finished on 01.mar.24
 
 			<img class="hide" src="/!g/deco/pencil1.gif" style="max-width:100%">
 
-			<p>links: <a title="will open on iframe, hosted on FC2" href="https://doqmeat.blog.fc2.com" target="iframe_a">microblog</a> / <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog</a> / <a href="credit.html" target="iframe_a">credit</a></p>
+			<p>links: <a title="food journal" href="https://moku.blog/user/doqmeat" target="_blank"> moku.blog</a> / <a href="credit.html" target="iframe_a">credit</a></p>
 
 
 		</nav>
