--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -35,6 +35,7 @@
 		<ul>
 			<li><a href="/about.html" target="_parent">about</a></li>
 			<li><a href="/journal/index.html" target="_parent">journal</a></li>
+			<li><a href="/microblog/index.html" target="_parent">microblog</a></li>
 			<li><a href="/blog/index.html" target="_parent">blog</a></li>
 			<li><a href="/music/index.html" target="_parent">music</a></li>
 			<ul>
