gaming log + homepage

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -188,6 +188,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav finished action adv single">
 			<a title="solar ash" href="solar-ash/index.html" target="iframe_a"><img src="solarash.jpg" class="vgimg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv fav notdone currently platformer">
+			<a title="sonic rush" href="sonic-rush/index.html" target="iframe_a"><img src="sonic-rush/cover.png" class="vgimg" tabindex="0"></a>
+		</div>
 		<div class="filterDiv multi shooter notdone">
 			<a title="splatoon 2" href="splatoon-2/index.html" target="iframe_a"><img src="splatoon-2/cover.jpg" class="vgimg" tabindex="0" alt="splatoon 2"></a>
 		</div>
