--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -48,11 +48,12 @@
 		<p>click on a <mark>vg thumbnail and content will appear here!</mark> <span class="hide"> <img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</span>
 		<p><small>they are in alphabetical order and can be sorted by the tags seen above them!</small></p>
 
-		<img src="/!g/deco/sunflowers2.gif">
+		<hr>
 
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>09.jun.24: added: <a href="sonic-rush/index.html">sonic rush</a></li>
 			<li>05.jun.24: added <a href="style-savvy-trendsetters/index.html">style savvy: trendsetters</a></li>
 			<li>24.may.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
 			<li>22.may.24 - log: <a href="fallout-new-vegas/index.html">new vegas</a> + <small>from now on i'm gonna start logs from newest to oldest!</small></li>
@@ -74,14 +75,13 @@
 			<li>14.jul.23 - added <a href="/vgs/prsk">project sekai</a></li>
 		</div>
 
-		<h3>lore</h3>
-		<p>i pretty much grew up playing video games :3 i'd write more in here but i don't got much else to say. video games fun.</p>
+		<h3>my gaming lore</h3>
+		<p>i pretty much grew up playing video games :3 i'd write more in here but i don't got much else to say at the moment. video games fun.</p>
 		<p><b>consoles i've had:</b> <s title="i don't remember what happened but it broke in the middle. maybe i let it fell...">DS lite</s>, <s title="the ring of death or whatever">xbox 360</s>, <s title="gave it to my cousin when i got a 3DS">DSi</s>, <s title="i think we sold this...">wii</s>, 3DS, wii u, <s title="i think i just need to buy a wired controller so i can be able to play it again LOL">PS4</s>, switch lite</p>
 		<p>honorable mention to my poor non-gamer laptops i've had to run games that weren't meant to be played in them.</p>
 
 		<h3>credit</h3>
-		<p>heading font is yoster</p>
-		<p>filter by tags JS code from <a href="https://www.w3schools.com/howto/howto_js_filter_elements.asp" target="_blank">w3schools</a></p>
+		<p>heading <a href="/notebook/links/fonts.html" target="_blank">font</a>is yoster / filter by tags JS code from <a href="https://www.w3schools.com/howto/howto_js_filter_elements.asp" target="_blank">w3schools</a></p>
 	</div>
 
 	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
