--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -108,7 +108,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="theme-picker" class="box">
 			<h2>pick a theme!</h2>
 			<button onclick="toggleTheme('/!f/homepage-v3/flower.css')">flower</button>
-			<button onclick="toggleTheme('/!f/homepage-v3/space.css')">space</button>
+			<!--			<button onclick="toggleTheme('/!f/homepage-v3/space.css')">space</button>-->
 			<!--			<button onclick="toggleTheme('/!f/homepage-v3/madoka.css')">madoka</button>-->
 		</div>
 
@@ -170,6 +170,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<div class="padding">
 
 				<h2>status</h2>
+				<b>news</b>: i finished the <a href="https://siinamota.doqmeat.com/fanlisting/" target="_blank">siinamota fanlisting</a>!
+				<br>
 				<span class="imood">i am feeling...</span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a>
 
 				<div id="statuscafe">
@@ -184,13 +186,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="current" class="box">
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a>, sonic rush, MySims</p>
-			<!--			<a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a>-->
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> building a <a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">siinamota fanlisting</a></p>
+			<p><span class="hl">working on:</span> N/A</p>
 			<p><span class="hl">coding/writing:</span> N/A</p>
-			<p class="date">last updated on 07.jun.24</p>
+			<p class="date">last updated on 09.jun.24</p>
 		</div>
 
 		<div id="updates" class="box">
