--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -18,7 +18,7 @@
 		<div id="address-bar">← → ↻ ⌂<span id="address">https://doqmeat.com/microblog</span></div>
 		<div id="blog">
 			<article>
-				<p><b>09.jun.24:</b> i've had this page on my draft for like 2 months or something! i thought about using it for my fc2 microblog but i've kind of just stopped using that... i want something simple so i can update it though the github app on my phone so i think this will do!</p>
+				<p><b>09.jun.24 - 12am:</b> i've had this page on my draft for like 2 months or something! i thought about using it for my fc2 microblog but i've kind of just stopped using that... i want something simple so i can update it though the github app on my phone so i think this will do!</p>
 			</article>
 
 		</div>
