--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -189,6 +189,8 @@
 			<a title="angel city" href="https://ginder.neocities.org" target="_blank"><img src="!g/ginder.png" alt="ginder"></a>
 			<a title="devils" href="https://devils.gay" target="_blank"><img src="!g/devils.gay.gif" alt="devils.gay"></a>
 			<a title="item64" href="https://item64.neocities.org" target="_blank"><img src="!g/item64.gif" alt="item64"></a>
+			<a title="crisis.city" href="https://crisis.city" target="_blank"><img src="!g/crisis.city.gif" alt="crisis.city"></a>
+			<a title="rice" href="https://rice.nekoweb.org/" target="_blank"><img src="https://rice.nekoweb.org/kamabokogonpachiro.gif"></a>
 		</div>
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
 		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> /
@@ -270,8 +272,7 @@
 			<a title="so colorful and wonderful" href="https://syntheticfruits.neocities.org" target="_blank"><img src="!g/syntheticfruits.gif" alt="syntheticfruits"></a>
 			<a title="vexcharm" href="https://vexcharm.net" target="_blank"><img src="!g/vexcharm.net.gif" alt="vexcharm"></a>
 			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /></a>
-			<a title="crisis.city" href="https://crisis.city" target="_blank"><img src="!g/crisis.city.gif" alt="crisis.city"></a>
-			<a title="rice" href="https://rice.nekoweb.org/" target="_blank"><img src="https://rice.nekoweb.org/kamabokogonpachiro.gif"></a>
+			<a title="jeansgurl98" href="https://jeansgurl98.com" target="_blank"><img src="!g/jeansgurl98.png" alt="jeansgurl98"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
