--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" type="image/x-icon" href="/!g/pix/catidea.gif">
 	<title>microblog</title>
 	<link href="index.css" rel="stylesheet" />
 	<!--	tooltip shit-->
@@ -19,7 +20,7 @@
 
 		<p><b>credit:</b> body bg from <a href="https://unsplash.com/@quinoal?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Quino Al</a> on <a href="https://unsplash.com/photos/body-of-water-and-seashore-JFeOy62yjXk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="https://archive.org/details/WindowsXPExtractedIcons" target="_blank">windows XP icons</a></p>
 	</div>
-	
+
 	<main>
 		<div id="bar"> __ □ X</div>
 		<div id="address-bar">← → ↻ ⌂<span id="address">https://doqmeat.com/microblog</span></div>
@@ -73,8 +74,9 @@
 				icon.style.display = "block";
 			}
 		}
-</script>
-<script src="picture.js"></script>
+
+	</script>
+	<script src="picture.js"></script>
 	<script src="/!f/draggable.js"></script>
 	<!--	<footer>hello this is the footer</footer>-->
 </body>
