--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -223,6 +223,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
 
+			<a href="http://fan.after-death.org/magica" target="_blank"><img src="!g/web/fanlisting-cliques/madoka.png" alt="madoka fanlisting"></a>
+
 			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting-cliques/siinamota-small.png" alt="siinamota fanlisting"></a>
 
 			<a href="https://www.marheavenj.net/power" target="_blank"><img src="!g/web/fanlisting-cliques/power.jpg" alt="power fanlisting"></a>
