--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -24,13 +24,22 @@
 	<main>
 		<div id="bar"> __ □ X</div>
 		<div id="address-bar">← → ↻ ⌂<span id="address">https://doqmeat.com/microblog</span></div>
+
 		<div id="blog">
+			<!-- TEMPLATE !!!
+		<article>
+			<p><b></b> </p>
+		</article>
+-->
+
 			<article>
 				<p><b>10.jun.24 - 12am:</b> my mom in her knitting phase so she made me some slippers. they are so warm and soft! <button onclick="showPic('!g/240610-slippers.png' , 'slippers')">240610-slippers.png</button></p>
 			</article>
+
 			<article>
 				<p><b>09.jun.24 - 12am:</b> i've had this page on my draft for like 2 months or something! i thought about using it for my fc2 microblog but i've kind of just stopped using that... i want something simple so i can update it though the github app on my phone so i think this will do!</p>
 			</article>
+
 		</div>
 
 		<div class="draggable" id="picture-win">
@@ -78,7 +87,6 @@
 	</script>
 	<script src="picture.js"></script>
 	<script src="/!f/draggable.js"></script>
-	<!--	<footer>hello this is the footer</footer>-->
 </body>
 
 </html>
