--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -33,8 +33,7 @@
 
 		<h3>other</h3>
 
-		<p>i run the <a href="https://twitter.com/hourlysiinamota" target="_blank">siinamota song bot</a> on twitter! i made a site with more info about the bot <a href="https://siinamota.doqmeat.com/bot" target="_blank">here</a>! if you're into vocaloid, i recommend checking out siinamota's stuff! i have a <a href="https://sepiarecord.notion.site/sepiarecord/homepage-6242b9a7ce844610bdf2a9187a0a1bfb" target="_blank">siinamota guide</a> on notion <img src="/!g/pix/emote1bubbles.gif"> where you can learn more about him and his music! (while i get his shrine ready...)</p>
-
+		<p>i run the <a href="https://twitter.com/hourlysiinamota" target="_blank">siinamota song bot</a> on twitter! you can see more info about the bot <a title="siinamota.doqmeat.com/bot" href="https://siinamota.doqmeat.com/bot" target="_blank">here</a>! if you're into vocaloid, i recommend checking out siinamota's stuff! i have a <a href="https://sepiarecord.notion.site/sepiarecord/homepage-6242b9a7ce844610bdf2a9187a0a1bfb" target="_blank">siinamota guide</a> on notion <img src="/!g/pix/emote1bubbles.gif" </p>
 
 		<h3>important dates</h3>
 
