--- a/doqmeat/projects/learning-js/index.html
+++ b/doqmeat/projects/learning-js/index.html
@@ -43,6 +43,7 @@
 			<li>have different themes on homepage that stay selected on reload</li>
 			<li>how to filter stuff</li>
 			<li>img modal pop up?</li>
+			<li>how to have stuff selected randomly</li>
 		</ul>
 	</main>
 
