--- a/doqmeat/shrines/index.html
+++ b/doqmeat/shrines/index.html
@@ -9,10 +9,10 @@ color palette: https://coolors.co/feef89-99d9ea-2e2eab-ff7f27
  -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/home.gif">
 	<title>shrines</title>
 	<link href="/fonts/stylesheet.css" rel="stylesheet">
 	<link href="index.css" rel="stylesheet">
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
