--- a/doqmeat/music/playlists.html
+++ b/doqmeat/music/playlists.html
@@ -53,7 +53,7 @@
 		<p><i>highlights:</i> rollercoaster - txt <img src="/!g/pix/starpink.gif"> secret tape - sunmi <img src="/!g/pix/starpink.gif"> neon - yukika <img src="/!g/pix/starpink.gif"> drunk dazed - enhypen <img src="/!g/pix/starpink.gif"> stone heart - taemin 2 <img src="/!g/pix/starpink.gif"> fast - superm</p>
 		<details>
 			<summary>youtube playlist</summary>
-			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=-U2FK--T9R_DnSNA&amp;list=PLJJj3iCewWn3JZCpr4DNcjo6AOY4RfQaR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=-U2FK--T9R_DnSNA&amp;list=PLJJj3iCewWn3JZCpr4DNcjo6AOY4RfQaR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</details>
 		<h4>drum n bass / breakbeat</h4>
 
