--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -33,6 +33,9 @@
 			<p><b></b> </p>
 		</article>
 -->
+			<article>
+				<p><b>12.jun.24 - 1am:</b> javascript be kicking my ass but i am slowly learning things I THINK!</p>
+			</article>
 
 			<article>
 				<p><b>10.jun.24 - 12am:</b> my mom in her knitting phase so she made me some slippers. they are so warm and soft! <button onclick="showPic('!g/240610-slippers.png' , 'slippers', 'they are super cozy')">240610-slippers.png</button></p>
@@ -45,11 +48,11 @@
 		</div>
 
 		<div class="draggable" id="picture-win">
-			<span class="picture-title"></span>
-			<button onclick="closePic()" class="x">x</button>
+			<span id="picture-title"></span>
+			<button onclick="toggleclick('picture-win')" class="x">x</button>
 			<br>
-			<img class="picture" src="" alt="">
-			<p class="picture-caption"></p>
+			<img id="picture" src="" alt="">
+			<p id="picture-caption"></p>
 		</div>
 	</main>
 
