--- a/doqmeat/music/cds.html
+++ b/doqmeat/music/cds.html
@@ -134,11 +134,12 @@
 		<!-- 			column 2 -->
 		<div class="column">
 
-			<!--
+
 			<div class="cd"><img src="!g/cds/setsunapop%20(1).jpg" alt="cover for alterour setsuna pop">
 				<div class="hov">
 					<div class="caption">
-						<h3>alterour setsuna pop - siinamota</h3>
+						<h3>アルターワー・セツナポップ / alterour setsuna pop - siinamota</h3>
+						<p><span class="placeholder"></span></p>
 						<p>got this for meee as a treat for my birthday!</p>
 						<p><small>will scan these later</small></p>
 						<a class="i" href="!g/cds/setsunapop%20(3).jpg" target="_blank"><img src="!g/cds/setsunapop%20(3).jpg"></a>
@@ -146,13 +147,13 @@
 						<a class="i" href="!g/cds/setsunapop%20(4).jpg" target="_blank"><img src="!g/cds/setsunapop%20(4).jpg"></a>
 						<p>because of this purchase i noticed that the different illustrations in here (drawn by <a href="https://www.pixiv.net/en/users/5105537" target="_blank">meisa</a>) all form 1 picture when put together.</p>
 						<a class="i" href="!g/cds/setsuna-pop-meisa.jpg" target="_blank"><img src="!g/cds/setsuna-pop-meisa.jpg"></a>
-						<p>i had seen pictures of the scans of this album before and yet i never noticed this. pretty neat!</p>
+						<p>i had seen pictures of the <a title="archive.org" href="https://archive.org/details/setsuna-pop-limited-ed" target="_blank" class="outlink">scans</a> of this album before and yet i never noticed this. pretty neat!</p>
 						<p><span class="ver"> regular</span></p>
 						<p><span class="date"> 29.may.24</span></p>
 					</div>
 				</div>
 			</div>
--->
+
 
 			<div class="cd"><img src="/shrines/siinamota/ikiru/cover-front.jpg">
 				<div class="hov">
