--- a/doqmeat/notebook/F2U/preview/notebook.html
+++ b/doqmeat/notebook/F2U/preview/notebook.html
@@ -42,7 +42,7 @@ coded with love by des -->
 			border: 1px solid black;
 		}
 
-		/*this is my ugly binder spiral! feel free to remove itor change it. it wont mess the rest of the code! */
+		/*this is my ugly binder spiral! feel free to remove it or change it. it wont mess the rest of the code! */
 		#tab1-wrapper:after,
 		#tab2-wrapper:after,
 		#tab3-wrapper:after,
@@ -396,21 +396,16 @@ coded with love by des -->
 
 
 	<script>
-		function openTab(evt, tabName) {
-			var i, tabcontent, tablinks;
-			tabcontent = document.getElementsByClassName("tabcontent");
-			for (i = 0; i < tabcontent.length; i++) {
-				tabcontent[i].style.display = "none";
+		function openTab(tabName) {
+			var i;
+			var tabcontent = document.getElementById(tabName);
+			var otherContent = document.getElementsByClassName("tabcontent");
+			var defaultOpen = document.getElementById("defaultOpen");
+			for (i = 0; i < otherContent.length; i++) {
+				otherContent[i].style.display = "none";
 			}
-			tablinks = document.getElementsByClassName("tablinks");
-			for (i = 0; i < tablinks.length; i++) {
-				tablinks[i].className = tablinks[i].className.replace(" active", "");
-			}
-			document.getElementById(tabName).style.display = "block";
-			evt.currentTarget.className += " active";
+			tabcontent.style.display = "block";
 		}
-
-		// Get the element with id="defaultOpen" and click on it
 		document.getElementById("defaultOpen").click();
 
 	</script>
