--- a/doqmeat/music/fav-albums.html
+++ b/doqmeat/music/fav-albums.html
@@ -251,7 +251,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 			<div id="kokegane" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
-					<h2> コケガネのうた (kokegane no uta) - siinamota</h2>
+					<h2> コケガネのうた (cokegane no uta) - siinamota</h2>
 					<p><img title="arwork by momoc" src="!g/fav-albums/kokeganenouta.jpg" align="right" width="40%" style="margin-left:10px">LOVE. love love love <img src="/!g/pix/catheart.gif"></p>
 					<p>okay... okay okay. i think this might be my 2nd fav siinamota release (not album since its an EP) because just wow. there's so many neat things here that i just love so so much</p>
 					<p>first of all: <b>the breakbeats</b> in the instrumentals. amazing. i honestly love how siinamota used breakbeats / drumloops. and i wish there were more of it in his discography! but maybe that's what makes them so special to me...</p>
@@ -266,7 +266,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 					<p>third of all: yeah i have my favorites but all of the songs are simply just so so so lovely. <i>in my head</i> opens with a very nice guitar and miku's tuning also feels so gentle <img src="/!g/pix/catupndown.gif"></p>
 					<p>and i havent even started talking about the <b>art</b> of this album!!!!! the artwork featured in the album cover and booklet is by japanese artist <a title="pixiv profile" href="https://www.pixiv.net/en/users/849346" target="_blank">momoc</a>!</p>
-					<p><img src="https://siinamota.doqmeat.com/pics/other/kokegane-no-uta-momoc-pixiv.jpg" width="100%" alt="full img of the kokegane no uta album cover"></p>
+					<p><img src="https://siinamota.doqmeat.com/scans/!g/kokegane-no-uta/img4.jpg" width="100%" alt="full img of the kokegane no uta album cover"></p>
 					<p>and let me tell you: this might be my favorite album cover. its so colorful and pretty. and i think it encapsulates well the vibes of this EP. thanks to this album cover, i got to know more about momoc's other work as well, and i just love their art style so much!!! i'll make a page someday on my site showcasing my fav works from them.</p>
 					<p>here are some pages from the <a title="archive.org page" href="https://archive.org/details/kokegane-no-uta-scans" target="_blank">booklet</a> (scans provided to me! i hope to own the CD someday) with more illustrations by momoc</p>
 					<p><img src="/shrines/siinamota/kokagane-no-uta/img5.jpg" width="100%"></p>
