--- a/doqmeat/notebook/sitely/info.html
+++ b/doqmeat/notebook/sitely/info.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>graphics</title>
+	<title>info</title>
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="site.css" rel="stylesheet" type="text/css" media="all">
@@ -32,7 +32,7 @@
 			<li>"Beautify" - makes code pretty and not so messy, organizes it</li>
 			<li>"Alice - Spell Checking" and alongside this "Alice Dictionaries"</li>
 			<li>"Brackets Git"</li>
-			<li>for UI improvements: <small>soon TM</small></li>
+			<li>for UI improvements: "custom work"</li>
 		</ul>
 		<p><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></p>
 		<p><b>image editing</b>:</p>
