--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -273,11 +273,13 @@
 			<a title="vexcharm" href="https://vexcharm.net" target="_blank"><img src="!g/vexcharm.net.gif" alt="vexcharm"></a>
 			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /></a>
 			<a title="jeansgurl98" href="https://jeansgurl98.com" target="_blank"><img src="!g/jeansgurl98.png" alt="jeansgurl98"></a>
+			<a title="dvdnerd" href="https://dvdnerd.neocities.org" target="_blank"><img src="!g/dvdnerd.jpg" alt="dvdnerd"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
-		<p><a href="https://neustadt.fr/">neustadt.fr</a> / <a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a></p>
+		<p><a href="https://neustadt.fr/">neustadt.fr</a> / <a href="https://pux.nehukon.de" target="_blank">pux.nehukon.de</a> / <a href="https://kiyuyu.nekoweb.org/" target="_blank">kiyuyu</a>
+		</p>
 
 		<h4 id="art">art / music</h4>
 		<div class="neo">
